Changing Update button to Edit

--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
                             <p>{{todo.desc}}</p>
                           </div>
                           <div>Created On {{todo.date_created.strftime("%d-%b-%Y %I:%M %p")}}</div> 
-                          <a href="/update/{{todo.sno}}"><button type="button" class="btn btn-success btn-sm mx-0">Update</button></a>
+                          <a href="/update/{{todo.sno}}"><button type="button" class="btn btn-success btn-sm mx-0">Edit</button></a>
                           &emsp;
                           <a href="/delete/{{todo.sno}}"><button type="button" class="btn btn-success btn-sm mx-0">Delete</button></a>
                           <div class="text-success">
